--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
 
 
 
-    <style name="OneTextView">
+    <style name="oneTextView">
         <item name="android:background">@color/btnInList</item>
         <item name="android:radius">3dp</item>
         <item name="android:gravity">center</item>
