--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,14 +13,14 @@
             android:layout_height="60dp"
             android:gravity="center"
             android:layout_gravity="center"
-            android:text="@string/addNumberBtn" />
+            android:text="@string/add_number_btn" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            android:background="@color/backList"
+            android:background="@color/back_list"
             />
 
 
