--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorBlueForNumber">#0830BD</color>
-    <color name="colorRedForNumber">#ED1111</color>
-    <color name="mainBackGround">#DAE3E8</color>
+    <color name="color_blue_for_number">#0830BD</color>
+    <color name="color_red_for_number">#ED1111</color>
+    <color name="main_back_ground">#DAE3E8</color>
 
-    <color name="backList">#ADD2E6</color>
-
-
-
-    <color name="colorPrimaryDark">#F85E5E</color>
-    <color name="colorAccent">#2B4AF6</color>
+    <color name="back_list">#ADD2E6</color>
 
 
-    <color name="btnInList">#A6E69F</color>
+
+    <color name="color_primary_dark">#F85E5E</color>
+    <color name="color_accent">#2B4AF6</color>
+
+
+    <color name="btn_In_list">#A6E69F</color>
 
 
 </resources>
